# demo-nrf52-periphs

./: .gdbinit  .gitignore  .gitmodules  .lager  CMakeLists.txt  README.md
.github/workflows/: build-and-flash-advanced.yml.example  build-flash-and-run-simple.yml
app/: CMakeLists.txt  main.c
cmake/: arm-gcc-toolchain.cmake  utils.cmake
docker/: Dockerfile
linker/: nrf52.ld
modules/: CMakeLists.txt
modules/imu/: CMakeLists.txt  imu.c  imu.h  mpu9250.c  mpu9250.h
modules/ledctrl/: CMakeLists.txt  ledctrl.c  ledctrl.h
modules/nrfsdk/: CMakeLists.txt  sdk_config.h
modules/shell/: CMakeLists.txt  shell.c  shell.h
nRF5_SDK_17/components/toolchain/gcc/: Makefile.posix
nRF5_SDK_17/config/nrf52840/config/: sdk_config.h
nRF5_SDK_17/examples/peripheral/timer/: main.c
nRF5_SDK_17/examples/peripheral/timer/pca10056/blank/armgcc/: Makefile
nRF5_SDK_17/examples/peripheral/uart/pca10056/blank/armgcc/: .gdbinit
system-tests/led_test/: main.py
unit-tests/: CMakeLists.txt  unity_config.c  unity_config.h
unit-tests/test-suites/: CMakeLists.txt
unit-tests/test-suites/test-example/: CMakeLists.txt  main_example.c  test1.c  test1.h  test_example.c  test_example.h
unit-tests/test-suites/test-ledctrl/: CMakeLists.txt  main_ledctrl.c  test_ledctrl.c
zig/: CMakeLists.txt  build.zig
zig/src/: main.zig  shell.zig
zig/zig-cache/o/4e73ba9d0c4516b1043e149768232a4d/: cimport.h
zig/zig-cache/o/61ad6d30e840803402994f2bebbe4f4e/: cimport.zig
zig/zig-cache/o/a290f8c13910188b3818a1621d280113/: builtin.zig  llvm-ar.id  stage1.id
zig/zig-cache/o/dc8a8f3c2521ca2b3dd03fb96eb6b124/: build  builtin.zig  lld.id  stage1.id
